--- a/winForms/GTAV radio stations/GTAV radio stations.csproj
+++ b/winForms/GTAV radio stations/GTAV radio stations.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{4BD8DAA9-63A3-4A77-A247-39E29D763837}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>GTAV_radio_stations</RootNamespace>
     <AssemblyName>GTAV radio stations</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
